--- a/plate_cover.html
+++ b/plate_cover.html
@@ -41,11 +41,7 @@ A visualization of <a href="https://bitbucket.org/robert_lamb/research_scripts/s
 
 	<h2> Do any of the species observed vary by exposure, treatment, and site? </h2>
 
-	<p>
-	<h3>Y axis </h3>
-	<ul id="yaxis">
-	</ul>
-	</p>
+	
 
 		
 		<script type="text/javascript">
@@ -90,13 +86,7 @@ A visualization of <a href="https://bitbucket.org/robert_lamb/research_scripts/s
 				//.text(function(d){
 				//	return "I can count up to " + d; 
 				//});
-d3.select("#yaxis").selectAll("li")
-    			.data(species)
-    			.enter()
-    			.append("li")
-    			.text(function(d) { return d; })
-    			.attr("class", "yselect")
-    			.attr("id", function(d) { return ("y" + d); });
+
 
 //width and height
 
@@ -106,13 +96,6 @@ d3.select("#yaxis").selectAll("li")
 				var w = 1000;
 				var h = 400;
 				var barPadding = 1;
-
-
-				//Set variables to encompass predictive data
-
-
-				var xcol=descriptors[0];
-				var ycol=species[0];
 
 				//Create an svg variable
 
@@ -129,17 +112,17 @@ d3.select("#yaxis").selectAll("li")
                      .range([0, w]);
 
                 var yScale = d3.scale.linear()
-                     .domain([0, d3.max(dataset, function(d) { return d[ycol]; })])
+                     .domain([0, d3.max(dataset, function(d) { return d.Ulva; })])
                      .range([0, h]);
-                
+                //Set variables to encompass predictive data
+
+
+				var xcol=descriptors[0];
+				var ycol=species[0];
 
 			
 
-				//Define Y axis
-				var yAxis = d3.svg.axis()
-								  .scale(yScale)
-								  .orient("left")
-								  .ticks(5);
+				
 
 
 				//reference svg to create bars
